--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 
 # Site
 title: 格物致知社
-subtitle: ''
+subtitle: 格物致知社
 description: ''
 keywords:
-author: John Doe
+author: ''
 language: zh-CN
 timezone: ''
 
